@@ -116,7 +116,7 @@ class LocalMatch : public SingleMatch
 	/// Make a postlist from a vector of query objects (AND or OR)
 	PostList *postlist_from_queries(
 				OmQuery::op op,
-				const std::vector<OmQueryInternal *> & queries,
+				const std::vector<const OmQueryInternal *> & queries,
 				om_termcount window);
 
 	/// Open a postlist
