@@ -48,7 +48,7 @@ class OmQueryInternal {
 	OmQuery::op op;
 
 	/// The container type for storing pointers to subqueries
-	typedef std::vector<OmQueryInternal *> subquery_list;
+	typedef std::vector<const OmQueryInternal *> subquery_list;
 
 	/// Sub queries on which to perform operation
 	subquery_list subqs;
@@ -86,8 +86,8 @@ class OmQueryInternal {
 	/** Set my vector of queries to be a memberwise copy of the
 	 *  supplied vector of OmQueryInternal pointers. */
 	void initialise_from_vector(
-		const std::vector<OmQueryInternal *>::const_iterator qbegin,
-		const std::vector<OmQueryInternal *>::const_iterator qend,
+		const std::vector<const OmQueryInternal *>::const_iterator qbegin,
+		const std::vector<const OmQueryInternal *>::const_iterator qend,
 		om_termpos window = 0);
 
 	/** swap the contents of this with another OmQueryInternal,
@@ -119,20 +119,12 @@ class OmQueryInternal {
 			const OmQueryInternal & left,
 			const OmQueryInternal & right);
 
-	/** A set of OmQueryInternals, merged together with specified
-	 * operator.  (Takes begin and end iterators).
-	 * The only operators allowed are AND, OR, NEAR, and PHRASE. */
-#if 0
+	/** A vector of pointers to OmQueryInternal-s, merged together with
+	 *  specified operator.  (Takes begin and end iterators).
+	 *  The only operators allowed are AND, OR, NEAR, and PHRASE. */
 	OmQueryInternal(OmQuery::op op_,
-		const std::vector<OmQueryInternal>::const_iterator qbegin,
-		const std::vector<OmQueryInternal>::const_iterator qend,
-		om_termpos window = 0);
-#endif
-
-	/** As before, but uses a vector of OmQueryInternal pointers. */
-	OmQueryInternal(OmQuery::op op_,
-		const std::vector<OmQueryInternal*>::const_iterator qbegin,
-		const std::vector<OmQueryInternal*>::const_iterator qend,
+		const std::vector<const OmQueryInternal*>::const_iterator qbegin,
+		const std::vector<const OmQueryInternal*>::const_iterator qend,
 		om_termpos window = 0);
 
 	/** As before, except subqueries are all individual terms. */
